--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
@@ -28,15 +28,16 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li {% if home %} class="active" {% endif %}><a href="{{index-uri}}">Home</a></li>
-                <li
-                {% if archives %} class="active" {% endif %}><a href="{{archives-uri}}">Archives</a></li>
+                <li {% if home %} class="active" {% endif %}><a href="{{index-uri}}">Episodes</a></li>
                 {% for nav-page in navbar-pages %}
                 <li
                 {%ifequal page.uri nav-page.uri %} class="active" {% endifequal %}>
                 <a href="{{nav-page.uri}}">{{nav-page.title}}</a>
                 </li>
                 {% endfor %}
+                <li><a href="{{source-code-url}}">Source Code</a></li>
+                <li
+                {% if archives %} class="active" {% endif %}><a href="{{archives-uri}}">Journal</a></li>
                 <li><a href="{{rss-uri}}">RSS</a></li>
             </ul>
         </div><!--/.nav-collapse -->
@@ -63,6 +64,19 @@
                     <li><a href="{{page.uri}}">{{page.title}}</a></li>
                     {% endfor %}
                 </ul>
+
+                {% if latest-posts|not-empty %}
+                <div id="recent">
+                    <h3>Recent</h3>
+                    <ul>
+                        {% for post in latest-posts %}
+                        <li>{{post.date|date:"MM.dd"}} <a href="{{post.uri}}">{{post.title}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+
+
                 {% if sidebar-links|not-empty %}
                 <div id="links">
                     <h3>{{ sidebar-links-title }}</h3>
@@ -74,16 +88,6 @@
                 </div>
                 {% endif %}
 
-                {% if latest-posts|not-empty %}
-                <div id="recent">
-                    <h3>Recent Posts</h3>
-                    <ul>
-                        {% for post in latest-posts %}
-                        <li><a href="{{post.uri}}">{{post.title}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
                 {% if tags|not-empty %}
                 <div id="tags">
                     <h3>Tags</h3>
