--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/index.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/index.html
@@ -2,14 +2,38 @@
 {%block subtitle %}: {{page.title}}{% endblock %}
 {% block content %}
 <div id="custom-page">
+
+
+<!--
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SM8xq8dYuCI?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+-->
+
+<link rel="stylesheet" href="/assets/videojs/video-js.min.css">
+
+<video id=example-video width=640 height=360 class="video-js vjs-default-skin" data-setup='{"controls": false, "loop": true, "autoplay": true, "preload": "true"}'>
+
+  <source
+     src="/media/tinydc/intro/out.m3u8"
+     type="application/x-mpegURL">
+
+
+</video>
+<script src="/assets/videojs/video.js"></script>
+<script src="/assets/videojs/videojs-contrib-hls.js"></script>
+<script>
+var player = videojs('example-video');
+player.play();
+</script>
+
+
     <div id="page-header">
         <h2>{{page.title}}</h2>
     </div>
+
+
     {% if page.toc %}{{page.toc|safe}}{% endif %}
 
 
-
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SM8xq8dYuCI?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     {{page.content|safe}}
 
