added bannerjs to layout for tinydc

--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
@@ -110,5 +110,6 @@
 <script>hljs.initHighlightingOnLoad();</script>
 {% if post.klipse %} {{post.klipse|safe}} {% endif %}
 {% if page.klipse %} {{page.klipse|safe}} {% endif %}
+<script src="/assets/bannerjs/banner.js"></script>
 </body>
 </html>
