added videojs assets

--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/index.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/index.html
@@ -8,7 +8,7 @@
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SM8xq8dYuCI?rel=0&amp;controls=0&amp;showinfo=0&amp;loop=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 -->
 
-<link rel="stylesheet" href="/assets/videojs/video-js.min.css">
+<link rel="stylesheet" href="/assets/videojs/video-js.css">
 
 <video id=example-video width=640 height=360 class="video-js vjs-default-skin" data-setup='{"controls": false, "loop": true, "autoplay": true, "preload": "true"}'>
 
@@ -16,6 +16,12 @@
      src="/media/tinydc/intro/out.m3u8"
      type="application/x-mpegURL">
 
+
+<!--
+  <source
+     src="https://ispooge.com/hls/ispoogedaily/index.m3u8"
+     type="application/x-mpegURL">
+-->
 
 </video>
 <script src="/assets/videojs/video.js"></script>
