--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
@@ -8,7 +8,7 @@
 
 <p>Sample of a segmented video file. 2sec max segment. Need to confirm keyframe alignment. ~450KB, should cache OK.</p>
 
-<link rel="stylesheet" href="/assets/videojs/video-js.min.css">
+<link rel="stylesheet" href="/assets/videojs/video-js.css">
 
 <video id=example-video width=640 height=360 class="video-js vjs-default-skin" data-setup='{"controls": "true", "loop": "false", "autoplay": "false", "preload": "false"}'>
   <source
