--- a/harlanji.com/app/resources/templates/themes/harlanji/html/home.html
+++ b/harlanji.com/app/resources/templates/themes/harlanji/html/home.html
@@ -1,6 +1,6 @@
 {% extends "/html/base.html" %}
 {% block content %}
-
+<a href="https://github.com/harlanji/tinydatacenter/tree/master/harlanji.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 <h1>{{ post.contact.name }}</h1>
 
