--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
@@ -1,43 +1,46 @@
 {% extends "/html/base.html" %}
-{%block subtitle %}: {{page.title}}{% endblock %}
+{%block subtitle %}: {{post.title}}{% endblock %}
 {% block content %}
-<div id="custom-page">
-    <div id="page-header">
-        <h2>EPISODE {{page.title}}</h2>
-    </div>
 
-<p>Sample of a segmented video file. 2sec max segment. Need to confirm keyframe alignment. ~450KB, should cache OK.</p>
+<script src="/assets/videojs/video.js"></script>
+<script src="/assets/videojs/videojs-contrib-hls.js"></script>
+
+<div id="post">
+  
+
+    <div id="page-header">
+        <h2>EPISODE {{post.title}}</h2>
+    </div>
 
 <link rel="stylesheet" href="/assets/videojs/video-js.css">
 
 <video id=example-video width=640 height=360 class="video-js vjs-default-skin" data-setup='{"controls": "true", "loop": "false", "autoplay": "false", "preload": "false"}'>
   <source
-     src="{{page.video-url}}"
+     src="{{post.video-url}}"
      type="application/x-mpegURL">
 
 
 </video>
-<script src="/assets/videojs/video.js"></script>
-<script src="/assets/videojs/videojs-contrib-hls.js"></script>
+
 <script>
 var player = videojs('example-video');
 player.play();
 </script>
 
 
-    {% if page.toc %}{{page.toc|safe}}{% endif %}
-    {{page.content|safe}}
 
+    
+   {% include "/html/post-content.html" %}
+   
+   
     <div id="prev-next">
-        {% if page.prev %}
-        <a href="{{page.prev.uri}}">&laquo; {{page.prev.title}}</a>
+        {% if post.prev %}
+        <a href="{{post.prev.uri}}">&laquo; {{post.prev.title}}</a>
         {% endif %}
-        {% if all page.prev page.next %}
-        ||
-        {% endif %}
-        {% if page.next %}
-        <a href="{{page.next.uri}}">{{page.next.title}} &raquo;</a>
+        {% if post.next %}
+        <a class="right" href="{{post.next.uri}}">{{post.next.title}} &raquo;</a>
         {% endif %}
     </div>
+
 </div>
 {% endblock %}
