--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/yt-episode.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/yt-episode.html
@@ -1,29 +1,27 @@
 {% extends "/html/base.html" %}
-{%block subtitle %}: {{page.title}}{% endblock %}
+{%block subtitle %}: {{post.title}}{% endblock %}
 {% block content %}
 <div id="custom-page">
     <div id="page-header">
-        <h2>EPISODE {{page.title}}</h2>
+        <h2>EPISODE {{post.title}}</h2>
     </div>
 
      <div>
        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{page.yt-episode-video-id}}?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
      </div>
 
-    {% if page.toc %}{{page.toc|safe}}{% endif %}
-
-    {{page.content|safe}}
 
 
+    
+   {% include "/html/post-content.html" %}
+   
+   
     <div id="prev-next">
-        {% if page.prev %}
-        <a href="{{page.prev.uri}}">&laquo; {{page.prev.title}}</a>
+        {% if post.prev %}
+        <a href="{{post.prev.uri}}">&laquo; {{post.prev.title}}</a>
         {% endif %}
-        {% if all page.prev page.next %}
-        ||
-        {% endif %}
-        {% if page.next %}
-        <a href="{{page.next.uri}}">{{page.next.title}} &raquo;</a>
+        {% if post.next %}
+        <a class="right" href="{{post.next.uri}}">{{post.next.title}} &raquo;</a>
         {% endif %}
     </div>
 </div>
