adding episode for maintainable website
tempalte changes for navigation

--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/archives.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/archives.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="posts">
     <div id="page-header">
-        <h2>Archives</h2>
+        <h2>Notebook</h2>
     </div>
     {% for group in groups %}
         <h4>{{group.group}}</h4>
