updated news feeds

--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
@@ -36,6 +36,7 @@
                 {% endfor %}
                 <li
                 {% if archives %} class="active" {% endif %}><a href="{{archives-uri}}">Notebook</a></li>
+                <li><a href="feeds.html">News</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
