--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/base.html
@@ -5,11 +5,11 @@
     <title>{{title}}{% block subtitle %}{% endblock %}</title>
     <link rel="canonical" href="{{site-url}}{{uri}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Alegreya:400italic,700italic,400,700' rel='stylesheet'
+    <link href='/assets/gfont.css' rel='stylesheet'
           type='text/css'>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css">
+    <link rel="stylesheet" href="/assets/bootstrap.css">
+    <link href="/assets/fontawesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/highlight-default.css">
     {% style "css/screen.css" %}
 </head>
 <body>
@@ -101,8 +101,8 @@
     <footer>Copyright &copy; {{today|date:yyyy}} {{author}}
         <p style="text-align: center;">Powered by <a href="http://cryogenweb.org">Cryogen</a></p></footer>
 </div>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="/assets/jquery.js"></script>
+<script src="/assets/bootstrap.js"></script>
 {% script "js/highlight.pack.js" %}
 <script>hljs.initHighlightingOnLoad();</script>
 {% if post.klipse %} {{post.klipse|safe}} {% endif %}
