updated episodes to use common template for regular or YT video. added u2f draft

--- a/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
+++ b/tinydatacenter.com-v2/app/resources/templates/themes/blue/html/episode.html
@@ -39,7 +39,21 @@
 var player = videojs('example-video');
 player.play();
 </script>
+
+{% else %}
+  {% if post.episode-yt-video-id %}
+    
+    
+     <div>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{post.episode-yt-video-id}}?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>     
+     
+
+     </div>
+    
+  {% endif %}
 {% endif %}
+
+
 
 
     
