--- a/harlanji.com/app/resources/templates/themes/harlanji/html/post.html
+++ b/harlanji.com/app/resources/templates/themes/harlanji/html/post.html
@@ -2,6 +2,8 @@
 {%block subtitle %}: {{post.title}}{% endblock %}
 {% block content %}
 <div id="post">
+<a href="/">Home</a>
+
     {% include "/html/post-content.html" %}
     <div id="prev-next">
         {% if post.prev %}
