--- a/harlanji.com/app/resources/templates/themes/harlanji/html/base.html
+++ b/harlanji.com/app/resources/templates/themes/harlanji/html/base.html
@@ -6,6 +6,10 @@
     <link rel="canonical" href="{{site-url}}{{uri}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% style "css/screen.css" %}
+
+
+    {% block head %}{% endblock %}
+
 </head>
 <body>
 
