--- a/tinydatacenter.com/app/resources/templates/themes/tinydc/html/base.html
+++ b/tinydatacenter.com/app/resources/templates/themes/tinydc/html/base.html
@@ -25,45 +25,48 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{index-uri}}">{{title}}</a>
+            <p>Big apps with tiny computers</p>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li {% if home %} class="active" {% endif %}><a href="{{index-uri}}">Home</a></li>
+                <li {% if home %} class="active" {% endif %}><a href="{{index-uri}}">Episodes</a></li>
                 <li
-                {% if archives %} class="active" {% endif %}><a href="{{archives-uri}}">Archives</a></li>
+                {% if archives %} class="active" {% endif %}><a href="{{archives-uri}}">Notebook</a></li>
                 {% for nav-page in navbar-pages %}
                 <li
                 {%ifequal page.uri nav-page.uri %} class="active" {% endifequal %}>
                 <a href="{{nav-page.uri}}">{{nav-page.title}}</a>
                 </li>
+                <li><a href="{{source-code-url}}">Source Code</a></li>
                 {% endfor %}
-                <li><a href="{{rss-uri}}">RSS</a></li>
+                <li><a href="/feeds.html">News</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                         More <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li class="dropdown-header">Links</li>
-                        <li><a href="http://cryogenweb.org/docs/home.html">Cryogen Docs</a></li>
-                        <li><a href="http://carmenla.me/blog/archives">Carmen's Blog</a></li>
+
+                        {% if latest-posts|not-empty %}
+                        
+                        <li class="dropdown-header">Recent</li>
+                        {% for post in latest-posts %}
+                        <li><a href="{{post.uri}}">{{post.date|date:"MM.dd"}} {{post.title}}</a></li>
+                        {% endfor %}
+                        {% endif %}
+
+								<li class="dropdown-header">Pages</li>
                         {% for page in sidebar-pages %}
                         <li><a href="{{page.uri}}">{{page.title}}</a></li>
                         {% endfor %}
-
-                        {% if latest-posts|not-empty %}
                         <li class="divider"></li>
-                        <li class="dropdown-header">Recent Posts</li>
-                        {% for post in latest-posts %}
+                        {% if sidebar-links|not-empty %}
+                        <li class="dropdown-header">{{ sidebar-links-title }}</li>
+
+                        {% for post in sidebar-links %}
                         <li><a href="{{post.uri}}">{{post.title}}</a></li>
                         {% endfor %}
-                        {% endif %}
+                        {% endif %}                        
+                        
 
-                        {% if tags|not-empty %}
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Tags</li>
-                        {% for tag in tags %}
-                        <li><a href="{{tag.uri}}">{{tag.name}}</a></li>
-                        {% endfor %}
-                        {% endif %}
                     </ul>
                 </li>
             </ul>
